--- a/frontend/src/app/list/list.component.html
+++ b/frontend/src/app/list/list.component.html
@@ -18,7 +18,7 @@
 					<span class="glyphicon glyphicon-ok"></span>
 					Atualizar
 				</button>
-				<button class="btn-aux" (click)="delete(person);">
+				<button type="reset" class="btn-aux" (click)="delete(person);">
 					<span class="glyphicon glyphicon-remove"></span>
 					Deletar
 				</button>				
